@@ -384,8 +384,8 @@ Volunteers for these and other projects are welcome!
 
 266 Include TAGS support.
 
-268*Make delay for updating glyphs configurable.
-
 269*Give all help a DDD icon.
 
-270 (Insert new project ideas here)
+270 Have netscape-style buttons that appear raised iff armed.
+
+271 (Insert new project ideas here)
